mise en forme index

--- a/index.html
+++ b/index.html
@@ -4,26 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/appstyle.css ">
     <title>App favorites</title>
 </head>
 
 <body>
     <header>
-        <h1>MES APPLICATIONS FAVORITES</h1>
-        <nav>
-            <ul>
-                <li><a href="#">HBO MAX</a></li>
-                <li><a href="#">EDF</a></li>
-                <li><a href="#">FDJ</a></li>
-            </ul>
-        </nav>
+
+
+        <div>
+            <h1 class="titreh1">MES APPLICATIONS FAVORITES</h1>
+        </div>
+
+        <div>
+            <nav>
+
+                <ul>
+                    <li><a href="#">HBO MAX</a></li>
+                    <li><a href="#">EDF</a></li>
+                    <li><a href="#">FDJ</a></li>
+                </ul>
+            </nav>
+        </div>
+
     </header>
 
     <main>
+        <div class="container1">
+            <h2><img src="./assets/img/HBO Max_Logo_RGB_Iridescent White.avif" alt="HBO MAX">
+            </h2>
+            <p>HBO Max est un service de streaming qui propose une vaste bibliothèque de films, séries et documentaires,
+                y compris des contenus originaux produits par HBO. Il offre une expérience de visionnage de haute
+                qualité avec une interface conviviale.</p>
+        </div>
+        <div class="container2">
+            <h2><img src="./assets/img/logo-edf.svg" alt="EDF"></h2>
+            <p>EDF est l'un des principaux fournisseurs d'électricité en France. Il propose des
+                solutions énergétiques pour les particuliers et les entreprises, y compris des offres d'électricité
+                verte.</p>
+        </div>
 
-
-
-
+        <div class="container3">
+            <h2><img src="./assets/img/FDJ-600x300-10.png" alt="FDJ"></h2>
+            <p>La FDJ est l'organisme en charge des jeux de loterie et de paris en France. Elle
+                propose une variété de jeux, y compris des tirages au sort et des paris sportifs.</p>
+        </div>
 
     </main>
 
