--- a/hbomax.html
+++ b/hbomax.html
@@ -29,7 +29,7 @@
         </div>
 
     </header>
-
+    <!----------------------------- FIN HEADER ---------------------------------->
     <main>
         <div class="container1">
             <h2><img src="./assets/img/HBO Max_Logo_RGB_Iridescent White.avif" alt="HBO MAX">
@@ -38,18 +38,7 @@
                 y compris des contenus originaux produits par HBO. Il offre une expérience de visionnage de haute
                 qualité avec une interface conviviale.</p>
         </div>
-        <div class="container2">
-            <h2><img src="./assets/img/logo-edf.svg" alt="EDF"></h2>
-            <p>EDF est l'un des principaux fournisseurs d'électricité en France. Il propose des
-                solutions énergétiques pour les particuliers et les entreprises, y compris des offres d'électricité
-                verte.</p>
-        </div>
 
-        <div class="container3">
-            <h2><img src="./assets/img/FDJ-600x300-10.png" alt="FDJ"></h2>
-            <p>La FDJ est l'organisme en charge des jeux de loterie et de paris en France. Elle
-                propose une variété de jeux, y compris des tirages au sort et des paris sportifs.</p>
-        </div>
 
     </main>
 
