realisation page hbo max

--- a/hbomax.html
+++ b/hbomax.html
@@ -30,15 +30,47 @@
 
     </header>
     <!----------------------------- FIN HEADER ---------------------------------->
-    <main>
-        <div class="container1">
 
-            <h2><img src="./assets/img/HBO Max_Logo_RGB_Iridescent White.avif" alt="HBO MAX">
-            </h2>
-            <p>HBO Max est un service de streaming qui propose une vaste bibliothèque de films, séries et documentaires,
-                y compris des contenus originaux produits par HBO. Il offre une expérience de visionnage de haute
-                qualité avec une interface conviviale.</p>
-        </div>
+
+    <!-- debut du main -->
+
+    <main class="fond">
+        <section>
+            <h2 class="titreh2">HBO MAX</h2>
+            <div class="containerhbomax">
+
+                <h2><img src="./assets/img/HBO Max_Logo_RGB_Iridescent White.avif" alt="HBO MAX">
+                </h2>
+                <p>
+                    HBO Max est un service de streaming qui propose une vaste bibliothèque de films, séries et
+                    documentaires,
+                    y compris des contenus originaux produits par HBO.
+                    Il offre une expérience de visionnage de haute
+                    qualité avec une interface conviviale.</p>
+
+
+                <h2>Abonnements HBO Max dès 5,99 €/mois
+                    5 €/mois pour l'option Sport et tout le contenu Eurosport*.
+                </h2>
+                <p>S'abonner à HBO Max, c'est choisir la qualité et la diversité.</p>
+                <button> S'abonner maintenant</button>
+            </div>
+        </section>
+
+        <section>
+            <h2 class="titreh2">Pourquoi choisir HBO Max ?</h2>
+            <div>
+                <img src="./assets/img/Capture d'écran hbo.png" alt="HD"></i>
+
+            </div>
+        </section>
+
+
+
+
+
+
+
 
 
     </main>
